[gd_scene load_steps=3 format=3 uid="uid://mlwupvg8a886"]

[ext_resource type="PackedScene" uid="uid://i2nwlab8rau" path="res://addons/gaea/graph/components/argument_editors/argument_editor.tscn" id="1_22r3d"]
[ext_resource type="Script" uid="uid://bo1ptrbf2x7kt" path="res://addons/gaea/graph/components/argument_editors/vector_argument_editor.gd" id="2_22r3d"]

[node name="Vector3Parameter" instance=ExtResource("1_22r3d")]
script = ExtResource("2_22r3d")

[node name="XContainer" type="HBoxContainer" parent="." index="1"]
layout_mode = 2

[node name="XLabel" type="Label" parent="XContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = " x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XSpinBox" type="SpinBox" parent="XContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
allow_greater = true
allow_lesser = true
select_all_on_focus = true

[node name="YContainer" type="HBoxContainer" parent="." index="2"]
layout_mode = 2

[node name="YLabel" type="Label" parent="YContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = " y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YSpinBox" type="SpinBox" parent="YContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
allow_greater = true
allow_lesser = true
select_all_on_focus = true

[node name="ZContainer" type="HBoxContainer" parent="." index="3"]
layout_mode = 2

[node name="ZLabel" type="Label" parent="ZContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = " z"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ZSpinBox" type="SpinBox" parent="ZContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
allow_greater = true
allow_lesser = true
select_all_on_focus = true
